Jo-Seok-Hee/STS-Project-suckystagram#2
2022-02-09

※서키스타그램 진행도

ㅁ.완료
1. 메인 뷰(로그인화면), 로그인기능 (세션처리,암호화, )
2. 회원가입 화면, 회원가입 기능
3. 타임라인 뷰

ㅁ.진행 예정
1. 타임라인 기능[업로드(사진첨부),게시글 보기] << 금방 진행가능
2. 댓글기능

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,9 +5,8 @@ header {
 	font-size:43px;
 }
 
-section {
-	height:500px;
-}
+
+
 
 footer{
 	height:70px;
@@ -24,3 +23,14 @@ footer{
 #signUpBox {
 	background-color: #edece4;
 }
+
+#timeline {
+	width:500px;
+	
+}
+
+#postHeader {
+	width:500px;
+	height:50px;
+}
+
